kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app.kubernetes.io/name: PLACEHOLDER_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
